7. Dont update MPD volume just after we receive a status update - as MPD already
   has that setting! Fixes an issue with pulseaudio setups - where MPD
   disconnects from pulse audio, tells cantata that volume is -1, and cantata
   attempts to set volume to 0.
8. When fading on stop, reset original volume immediately before sending stop.

0.8.0
-----
 1. Add ability to play MPD HTTP output stream via phonon. Thanks to Marcel
    Bosling for the idea and initial patch.
 2. Implement Ctrl+MouseWheel zoom for Qt-only info view.
 3. Initial attempt at a Windows port. (This is my 1st EVER windows build, so
    don't expect much!). See README.
 4. Add Track Organizer dialog to Qt-only build.
 5. Disable 'Edit Tags' and 'Organize Files' actions if MPD dir is not readable.
 6. No need to check if playqueue song exists in MPD dir when performing a
    'locate in library'. Its possible that the configured MPD dir does not
    exist - but 'locate in library' should still work.
 7. Implement a basic spinner widget for item views in Qt-only builds.
 8. Make Qt-only builds single instance apps, as per KDE build.
 9. Add commandline file loading support to Qt-only builds.
10. Remove ThreadWeaver usage, and add ReplayGain calculation support to
    Qt-only builds.
11. Fix size of playback buttons in qt-only build. Force icons to have a
    28x28 setting.
12. Add support for listing playlist files in folder view. Thanks to Aleksandr
    Beliaev for the patch.
13. When adding items to the playqueue, sort the selected items based upon
    their QModelIndex.
14. Add support for multiple MPD servers. Only 1 is ever active. If there
    are 2 or more servers defined, the settings menu will contain a sub menu
    to allow quick access to each server.
15. If an MPD connection has more than 1 output, show an 'Outputs' sub menu
    in the settings menu.
16. Disable volume control if MPD returns a volume of -1 - as it does when the
    mixer is disabled.